fixed layout issues found in IE

--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -187,7 +187,7 @@ nav.nav-bar {
     transition-duration: 200ms;
     transition-timing-function: ease-out;
     color: fade(@link, 0);
-    font-size: 0.9em;
+    font-size: 0px;
     width: 0;
     overflow: hidden;
 } 
